<resources>
    <string name="action_back">Back</string>
    <string name="action_menu">Set</string>
    <string name="agree_and_continue">Agree and continue</string>
    <string name="app_name">com.xiaomi.common</string>
    <string name="back_to_charge">Recharging</string>
    <string name="back_to_charge_to_clean">Recharging. Are you sure to pause recharging and start cleaning?</string>
    <string name="back_to_dock_no_power">Recharging failed, the dock charger is not connected to an outlet</string>
    <string name="button_confirm">OK</string>
    <string name="button_contact">Contact customer support now</string>
    <string name="cancel">Cancel</string>
    <string name="carpet_high_pressure">Carpet Boost mode</string>
    <string name="carpet_high_pressure_desc_line_1">When this mode is enabled, the robot will automatically identify a carpet and apply the maximum vacuum to clean the carpet, and resume its normal vacuum when the robot steps off the carpet.</string>
    <string name="carpet_high_pressure_desc_line_2">*Minor entanglement will be neglected in this mode.</string>
    <string name="carpet_mode_firmware_version">xxxxxxxxxx</string>
    <string name="change_method">Replacement method:</string>
    <string name="charge_error_status">Charging error</string>
    <string name="charge_text">Recharge</string>
    <string name="charging">Charging</string>
    <string name="clean">Cleaning</string>
    <string name="clean_complete_msg">My master, I have finished the cleaning task. Will you show my outcome to your friend?</string>
    <string name="clean_complete_negative">Finish</string>
    <string name="clean_complete_positive">Finish and share</string>
    <string name="clean_history">Cleaning logs</string>
    <string name="clean_history_clean_area">Cleaning %1$s</string>
    <string name="clean_history_clean_completed">Cleaning finished, start to return</string>
    <string name="clean_history_clean_interrupted">Cleaning interrupted</string>
    <string name="clean_history_clear">Delete cleaning record</string>
    <string name="clean_history_clear_remind">Clear all records?</string>
    <string name="clean_history_day_name" />
    <string name="clean_history_duration">Working %1$s%2$s</string>
    <string name="clean_history_hour_minute_sep">:</string>
    <string name="clean_history_item_area_symbol">m²</string>
    <string name="clean_history_item_area_symbol_tw">坪</string>
    <string name="clean_history_map_clean_area_title">Cleaning</string>
    <string name="clean_history_map_clean_complete">Cleaning finished, automatically return to recharge</string>
    <string name="clean_history_map_clean_time_title">Work</string>
    <string name="clean_history_map_title">Map</string>
    <string name="clean_history_month_name">.</string>
    <string name="clean_history_summary_area_desc">Cumulative hours</string>
    <string name="clean_history_summary_area_symbol">Total cleaning count/square meter</string>
    <string name="clean_history_summary_area_symbol_ext">Total cleaning count/m²</string>
    <string name="clean_history_summary_area_symbol_tw">总清扫 / 坪</string>
    <string name="clean_history_summary_duration_desc">Cumulative cleaning count</string>
    <string name="clean_history_summary_hour">Total hours/hour</string>
    <string name="clean_history_summary_minute">Total hours/minute</string>
    <string name="clean_history_summary_placeholder">--</string>
    <string name="clean_history_summary_time">Total number/number</string>
    <string name="clean_history_summary_times_desc">Cumulative numbers</string>
    <string name="clean_pause_btn_stop">End this cleaning cycle</string>
    <string name="clean_pause_dialog_title">Are you sure to pause cleaning?</string>
    <string name="clean_record_delete_in_progress">Deleting in progress......</string>
    <string name="clean_to_back_to_charge">Cleaning. Are you sure to pause cleaning and start recharging?</string>
    <string name="clipboard_error">Clipboard error</string>
    <string name="close_dnd_mode">Disable DND mode...</string>
    <string name="coming_soon">Coming soon</string>
    <string name="common_error_message">Please check the machine and eliminate the error</string>
    <string name="common_error_title">Error</string>
    <string name="consumable_and_maintain">Consumables &amp; Maintenance</string>
    <string name="consumable_buy_url">http://home.mi.com/shop/search?keyword=扫地</string>
    <string name="consumable_charging_electrode">Charging contact pieces</string>
    <string name="consumable_filter_desc">A strainer is made of polymeric fibers and used to prevent dust escaping from the dust bin. The strainer may be gradually blocked and invalidated over time. It is recommended to change the strainer every 150 running hours or less.</string>
    <string name="consumable_main_brush_desc">A main brush is a major cleaning part for the robot and integrated to rotate in high speed to roll waste up into the dust bin. but it may be gradually worn over time, thereby affecting the cleaning effect. It is recommended to change it every 300 work hours or less.</string>
    <string name="consumable_red_sensor">IR sensor</string>
    <string name="consumable_remain_time">Remaining</string>
    <string name="consumable_reset">Resetting...</string>
    <string name="consumable_side_brush_desc">A side brush is used to clean waste in corners. It comes into contact with the ground at a gold angle and sends the waste into a main brush, but it may be gradually worn over time, thereby affecting the cleaning effect. It is recommended to change it every 200 work hours or less.</string>
    <string name="consumable_spot_sensor">Motion tracking sensor</string>
    <string name="consumable_stiff_sensor">Cliff Sensor</string>
    <string name="consumable_vertical_line">|</string>
    <string name="consumable_worked">Worked</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="country_ca">Canada(Canada)</string>
    <string name="country_eu">EU(EU)</string>
    <string name="country_hk">Hong Kong(香港地區)</string>
    <string name="country_kr">Korea(대한민국)</string>
    <string name="country_other">Other counties or regions</string>
    <string name="country_ru">Russia(Россия)</string>
    <string name="country_select_subtitle_format">Your current local server:%1$s</string>
    <string name="country_select_title">Please select your country or region</string>
    <string name="country_select_validate">it is Matching</string>
    <string name="country_sg">Singapore(Singapore)</string>
    <string name="country_tw">Taiwan(臺灣地區)</string>
    <string name="country_us">USA(USA)</string>
    <string name="custom">Custom mode</string>
    <string name="custom_service_prompt_message">Thank you for your support with our Xiaowa Robotic Vacuum Cleaner. For any problem encountered during use of the product, you can:</string>
    <string name="custom_service_we_chat_format">follow our WeChat %1$s to reach to our customer support in real time</string>
    <string name="customer_service">Customer service</string>
    <string name="customer_service_email_cn">service@roborock.com</string>
    <string name="customer_service_email_de">support@roborock-eu.com</string>
    <string name="customer_service_email_format">Email to: %1$s</string>
    <string name="customer_service_email_sg">support@roborock.com</string>
    <string name="customer_service_email_us">support@roborock.com</string>
    <string name="customer_service_phone_format">call the Roborock customer support hotline at: %1$s</string>
    <string name="customer_service_phone_number">400-900-1755</string>
    <string name="data_loading">Loading...</string>
    <string name="day">Day(s)</string>
    <string name="default_desc">(default)</string>
    <string name="do_time_zone_sync">Sync now</string>
    <string name="dustbin_filter">Clean the dust bin and strainer</string>
    <string name="empty_clean_record">No cleaning logs available</string>
    <string name="empty_clean_timer">Timer is null</string>
    <string name="empty_item" />
    <string name="end_time">End time</string>
    <string name="error">Fault details</string>
    <string name="error_acc">Machine inclined</string>
    <string name="error_acc_content">The machine is inclined when starting. Please place the machine on a level floor and start it.</string>
    <string name="error_acc_msg">Please place the machine on a level floor and start it</string>
    <string name="error_battery">Battery exception</string>
    <string name="error_battery_content">Too high or too low battery temperature. Please wait until the battery temperature gets right before use.</string>
    <string name="error_battery_msg">Please wait until the battery temperature gets right before use</string>
    <string name="error_binfull">Please clean the dust bin</string>
    <string name="error_binfull_content">The cleaning effect may be compromised if the dust bin is left uncleaned for a prolonged period of time. Please regularly clean the dust bin.</string>
    <string name="error_binfull_msg">Please regularly clean the dust bin for me</string>
    <string name="error_bumper">The bumper gets stuck</string>
    <string name="error_bumper_content">The bumper gets stuck. Please lightly tap to remove foreign matters for several times; if no foreign matters are found, please move the machine to a new location and start it.</string>
    <string name="error_bumper_msg">Please clean and lightly tap the bumper</string>
    <string name="error_charge">Charging exception</string>
    <string name="filter_elements_change_method_line1">1. Use your finger to remove the filter assemblies in the left and right along the notch</string>
    <string name="filter_elements_change_method_line2">2. Install a new filter assembly in place</string>
    <string name="filter_elements_desc">The filter assembly is used to filter out foreign matters and works by taking advantage of capillary-size pores to suction water from the water tank to evenly wet the mopping cloth to achieve good performance. The filter may be blocked over time (yellowing). It is recommended to replace a filter assembly every 1-3 months to ensure the cleaning effect, depending on the quality of water and frequency of use.</string>
    <string name="mode">Cleaning mode</string>
    <string name="mode_standard">Standard</string>
    <string name="mop_alert_desc">"The mopping mode is only intended for a cleaned floor
Install the mopping module before enabling this mode

Do not use the mopping mode on a carpeted floor
Use a virtual wall for blockage for a carpeted floor

The mopping mode is not recommended when there is nobody at home"</string>
    <string name="mop_alert_text">I know</string>
    <string name="mop_alert_title">-Kindly Reminder-</string>
    <string name="net_fail_msg">Network connection timeout, please check network settings</string>
    <string name="oba_bom_title">BOM:</string>
    <string name="oba_firmware_ver_title">Firmware version:</string>
    <string name="oba_language_title">Voice:</string>
    <string name="oba_location_title">Region:</string>
    <string name="oba_log_server_title">LOG server:</string>
    <string name="oba_name_title">Configuration name:</string>
    <string name="oba_sn_title">S/N:</string>
    <string name="oba_timezone_title">Time zone:</string>
    <string name="oba_wifi_plan_title">Wi-Fi channel:</string>
    <string name="ok">OK</string>
    <string name="parts_buy">Buy now</string>
    <string name="pause">Pause</string>
    <string name="plug_timer_clear">Clear</string>
    <string name="plug_timer_no_set">Unset</string>
    <string name="plug_timer_on_time">ON time</string>
    <string name="plug_timer_onetime">Execute one time</string>
    <string name="plug_timer_repeat">Repeat</string>
    <string name="quit">QUIT</string>
    <string name="retry">Try again</string>
</resources>