<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@color/main_page_action_bar_bg" android:layout_width="fill_parent" android:layout_height="@dimen/main_page_action_bar_height" android:layout_alignParentBottom="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.rockrobo.ui.HeartBeatView android:id="@id/action_bar_charge" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" app:hb_image="@drawable/action_bar_charge" app:hb_pause_image="@drawable/action_bar_pause" app:hb_pause_text="@string/pause" app:hb_sleeping_image="@drawable/action_bar_charge_sleeping" app:hb_sleeping_text_color="@color/main_page_button_desc_sleeping" app:hb_text="@string/charge_text" app:hb_text_color="@color/main_page_button_desc" app:hb_text_size="@dimen/main_page_action_bar_text_size" />
    <com.rockrobo.ui.HeartBeatView android:id="@id/action_bar_clean" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" app:hb_image="@drawable/action_bar_clean" app:hb_pause_image="@drawable/action_bar_pause" app:hb_pause_text="@string/pause" app:hb_sleeping_image="@drawable/action_bar_clean_sleeping" app:hb_sleeping_text_color="@color/main_page_button_desc_sleeping" app:hb_text="@string/clean" app:hb_text_color="@color/main_page_button_desc" app:hb_text_size="@dimen/main_page_action_bar_text_size" />
    <com.rockrobo.ui.ListHeartbeatView android:id="@id/action_bar_mode" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0" app:hb_sleeping_text_color="@color/main_page_button_desc_sleeping" app:hb_text="@string/mode_standard" app:hb_text_color="@color/main_page_button_desc" app:hb_text_size="@dimen/main_page_action_bar_text_size" />
</LinearLayout>