<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="horizontal" android:paddingLeft="23.0dip" android:paddingTop="24.0dip" android:paddingRight="23.0dip" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/black" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/net_fail_msg" android:layout_alignParentLeft="true" />
    <TextView android:textColor="@color/bg_blue" android:id="@id/text_retry" android:background="@drawable/text_button_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/retry" android:layout_below="@id/title" android:layout_alignParentRight="true" />
    <TextView android:textColor="@color/bg_blue" android:id="@id/text_cancel" android:background="@drawable/text_button_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="23.0dip" android:text="@string/cancel" android:layout_toLeftOf="@id/text_retry" android:layout_below="@id/title" />
</RelativeLayout>