<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:id="@id/dialog_root" android:background="@drawable/mop_alert_dialog_bg" android:paddingLeft="35.0dip" android:paddingTop="20.0dip" android:paddingRight="35.0dip" android:paddingBottom="20.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="100.0dip" android:layout_height="100.0dip" android:src="@drawable/robot_upward" />
    <TextView android:textSize="17.0sp" android:textColor="@color/mop_alert_title_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/mop_alert_title" />
    <TextView android:textSize="15.0sp" android:textColor="@color/mop_alert_desc_color" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/mop_alert_desc" android:lineSpacingExtra="4.0dip" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
        <Button android:textSize="15.0sp" android:textColor="@color/mop_alert_dialog_button_stroke" android:id="@id/button_confirm" android:background="@drawable/mop_alert_dialog_button" android:layout_width="150.0dip" android:layout_height="40.0dip" android:text="@string/mop_alert_text" />
    </LinearLayout>
</LinearLayout>