<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/list_item_bg_color" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/title_bar_consumable" />
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="@dimen/consumable_filter_element_big_image_height">
        <ImageView android:layout_gravity="center" android:paddingTop="@dimen/consumable_big_image_top_margin" android:paddingBottom="35.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/consumable_filter_elements" android:scaleType="fitCenter" />
    </LinearLayout>
    <TextView android:textSize="@dimen/consumable_desc_text_size" android:textColor="@color/consumable_desc_text_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/consumable_filter_desc_margin_h" android:layout_marginRight="@dimen/consumable_filter_desc_margin_h" android:layout_marginBottom="6.0dip" android:text="@string/filter_elements_desc" android:lineSpacingExtra="@dimen/consumable_desc_line_space_extra" />
    <TextView android:textSize="@dimen/consumable_sub_desc_text_size" android:textColor="@color/consumable_desc_text_color" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/consumable_filter_desc_margin_h" android:layout_marginRight="@dimen/consumable_filter_desc_margin_h" android:text="@string/change_method" android:lineSpacingExtra="@dimen/consumable_desc_line_space_extra" />
    <TextView android:textSize="@dimen/consumable_sub_desc_text_size" android:textColor="@color/consumable_desc_text_color" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/consumable_filter_desc_margin_h" android:layout_marginRight="@dimen/consumable_filter_desc_margin_h" android:text="@string/filter_elements_change_method_line1" android:lineSpacingExtra="@dimen/consumable_desc_line_space_extra" />
    <TextView android:textSize="@dimen/consumable_sub_desc_text_size" android:textColor="@color/consumable_desc_text_color" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/consumable_filter_desc_margin_h" android:layout_marginRight="@dimen/consumable_filter_desc_margin_h" android:text="@string/filter_elements_change_method_line2" android:lineSpacingExtra="@dimen/consumable_desc_line_space_extra" />
    <RelativeLayout android:id="@id/side_brush_btn" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <Button android:textSize="@dimen/consumable_button_text_size" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/consumable_buy" android:background="@drawable/consumable_buy" android:layout_width="wrap_content" android:layout_height="@dimen/consumable_buy_height" android:layout_marginBottom="@dimen/consumable_filter_element_button_margin_bottom" android:text="@string/parts_buy" android:textAllCaps="false" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>