<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:orientation="vertical" android:background="@color/class_A" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/plug_set_timer_title" />
    <RelativeLayout android:id="@id/view_repeat" android:layout_width="fill_parent" android:layout_height="@dimen/timer_setup_list_item_height" android:layout_marginLeft="@dimen/list_item_margin" android:layout_marginRight="@dimen/list_item_margin" android:layout_below="@id/title_bar">
        <TextView android:textSize="@dimen/timer_setup_title_text_size" android:textColor="@color/class_V" android:id="@id/tv_repeat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14.0dip" android:text="@string/plug_timer_repeat" android:layout_alignParentLeft="true" />
        <TextView android:textSize="@dimen/timer_setup_subtitle_text_size" android:textColor="@color/plug_timer_subtitle" android:id="@id/tv_repeat_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/plug_timer_onetime" android:layout_below="@id/tv_repeat" android:layout_alignParentLeft="true" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/plug_set_timer_mark" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <View android:background="@color/list_separate_line_color_3" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/view_timer_on" android:layout_width="fill_parent" android:layout_height="@dimen/timer_setup_list_item_height" android:layout_marginRight="@dimen/list_item_margin" android:layout_below="@id/view_repeat">
        <ImageView android:id="@id/iv_timer_on_mark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_setup_mark_margin_left" android:src="@drawable/plug_set_timer_mark" android:layout_alignParentLeft="true" android:layout_centerInParent="true" />
        <TextView android:textSize="@dimen/timer_setup_title_text_size" android:textColor="#ff208356" android:id="@id/tv_timer_on" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_item_margin" android:layout_marginTop="14.0dip" android:text="@string/plug_timer_on_time" android:layout_alignParentLeft="true" />
        <TextView android:textSize="@dimen/timer_setup_subtitle_text_size" android:textColor="@color/plug_timer_subtitle" android:id="@id/tv_timer_on_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/plug_timer_no_set" android:layout_below="@id/tv_timer_on" android:layout_alignLeft="@id/tv_timer_on" />
        <View android:background="@color/list_separate_line_color_3" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="@dimen/list_item_margin" android:layout_alignParentBottom="true" />
        <Button android:textSize="@dimen/timer_setup_subtitle_text_size" android:textColor="@color/plug_timer_subtitle" android:id="@id/clear_on_timer_btn" android:background="@drawable/button_bg" android:visibility="gone" android:layout_width="@dimen/timer_setup_item_right_button_width" android:layout_height="30.0dip" android:text="@string/plug_timer_clear" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/timer_clean_mode" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/timer_setup_list_item_height" android:layout_marginRight="@dimen/list_item_margin" android:layout_below="@id/view_timer_on">
        <ImageView android:id="@id/timer_clean_mode_mark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/timer_setup_mark_margin_left" android:src="@drawable/plug_set_timer_mark" android:layout_alignParentLeft="true" android:layout_centerInParent="true" />
        <TextView android:textSize="@dimen/timer_setup_title_text_size" android:textColor="#ff208356" android:id="@id/timer_clean_mode_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_item_margin" android:layout_marginTop="14.0dip" android:text="@string/mode" android:layout_alignParentLeft="true" />
        <TextView android:textSize="@dimen/timer_setup_subtitle_text_size" android:textColor="@color/plug_timer_subtitle" android:id="@id/timer_clean_mode_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_item_margin" android:layout_below="@id/timer_clean_mode_title" />
        <View android:background="@color/list_separate_line_color_3" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginLeft="@dimen/list_item_margin" android:layout_alignParentBottom="true" />
    </RelativeLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <LinearLayout android:orientation="vertical" android:id="@id/view_tp_on" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/timer_setup_subtitle_text_size" android:textColor="#ffafafaf" android:layout_gravity="center" android:id="@id/tv_timer_on_hint" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <com.xiaomi.smarthome.common.ui.widget.TimePicker android:id="@id/tp_timer_on" android:layout_width="fill_parent" android:layout_height="@dimen/timer_setup_date_picker_height" android:layout_marginTop="@dimen/timer_setup_date_picker_margin_top" />
        </LinearLayout>
        <com.xiaomi.smarthome.common.ui.widget.NumberPicker android:id="@id/timer_mode_picker" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="@dimen/timer_setup_date_picker_height" android:layout_marginTop="@dimen/timer_setup_date_picker_margin_top" />
    </FrameLayout>
</RelativeLayout>